# ssl-rfdetr-pneumonia

./: .gitignore  README.md  pyproject.toml
configs/: finetune_rfdetr.yaml  ssl_pretrain.yaml
scripts/: run_kaggle.sh
src/: __init__.py  compare_results.py  evaluate_rsna.py  train_rfdetr.py  train_ssl.py  visualize.py
src/data/: dataset_ssl.py  prepare_coco.py  transforms.py
src/models/: ssl_dinov2.py
src/utils/: logger.py  metrics.py
visualizations/frac10/: metrics_frac10.json  summary_frac10.txt
visualizations/frac25/: metrics_frac25.json  summary_frac25.txt
visualizations/frac50/: metrics_frac50.json  summary_frac50.txt
